docker-compose fix

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,9 +11,9 @@ services:
     env_file:
       - .env
     environment:
-      POSTGRES_DB: $(POSTGRES_NAME)
-      POSTGRES_USER: $(POSTGRES_USER)
-      POSTGRES_PASSWORD: $(POSTGRES_PASSWORD)
+      POSTGRES_DB: ${POSTGRES_NAME}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       PGDATA: /var/lib/postgresql/data/pgdata
     volumes:
       - pgdata:/var/lib/postgresql/data/pgdata
