docker-compose fix

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,7 +7,10 @@ services:
       - "6379:6379"
 
   db:
-    image: postgres
+    restart: always
+    image: postgres:14.7-alpine
+    expose:
+      - '5432'
     env_file:
       - .env
     environment:
@@ -19,6 +22,11 @@ services:
       - pgdata:/var/lib/postgresql/data/pgdata
     ports:
       - "5432:5432"
+    healthcheck:
+      test: [ "CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}" ]
+      interval: 5s
+      timeout: 5s
+      retries: 5
 
 
   app:
@@ -28,7 +36,8 @@ services:
     ports:
       - "8000:8000"
     depends_on:
-      - db
+      db:
+        condition: service_healthy
 
   celery:
     build: .
