--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -23,15 +23,14 @@ services:
     ports:
       - "5432:5432"
     healthcheck:
-      test: [ "CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}" ]
-      interval: 5s
-      timeout: 5s
-      retries: 5
+      test: [ "CMD-SHELL", "pg_isready -U ${POSTGRES_USER}" ]
 
 
   app:
     build: .
     tty: true
+    env_file:
+      - .env
     command: bash -c "python manage.py migrate && python manage.py runserver 0.0.0.0:8000"
     ports:
       - "8000:8000"
@@ -49,6 +48,8 @@ services:
 
   celery_beat:
     build: .
+    env_file:
+      - .env
     tty: true
     command: celery -A config beat -l info -S django
     depends_on:
